# alfred

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  paths.rs  sorter.rs  utils.rs  watcher.rs
